crates/vidforge-core/tests/snapshots/args_facts__drone_smallest_av1.snap
---
source: crates/vidforge-core/tests/args_facts.rs
expression: text
---
全局   ffmpeg -hide_banner -nostdin -y -loglevel warning -progress pipe:1 -nostats
输入   -hwaccel d3d11va -i D:\素材\航拍\DJI_20260812_0142.MP4
映射   -map 0:0 -map_metadata 0
视频   -c:v libsvtav1 -pix_fmt yuv420p -preset 6 -crf 38 -svtav1-params tune=0
滤镜   -vf scale=-2:1080:flags=lanczos
封装   -f matroska
输出   D:\转码输出\DJI_20260812_0142_1080p_av1.mkv
