crates/vidforge-core/tests/snapshots/args_facts__iphone_dv84_archive_keep_dv.snap
---
source: crates/vidforge-core/tests/args_facts.rs
expression: text
---
全局   ffmpeg -hide_banner -nostdin -y -loglevel warning -progress pipe:1 -nostats
输入   -i D:\素材\2026-08 京都\IMG_4521.MOV
映射   -map 0:0 -map 0:1 -map_metadata 0
视频   -c:v libx265 -pix_fmt yuv420p10le -preset medium -crf 20 -x265-params repeat-headers=1 -dolbyvision 1
音频   -c:a:0 copy
封装   -f matroska
输出   D:\转码输出\IMG_4521_2160p_hevc.mkv
