crates/vidforge-core/tests/snapshots/args_facts__iphone_dv84_mobile_tonemap_sdr.snap
---
source: crates/vidforge-core/tests/args_facts.rs
expression: text
---
全局   ffmpeg -hide_banner -nostdin -y -loglevel warning -progress pipe:1 -nostats
输入   -hwaccel auto -i D:\素材\2026-08 京都\IMG_4521.MOV
映射   -map 0:0 -map 0:1 -map_metadata 0
视频   -c:v h264_qsv -pix_fmt nv12 -preset medium -global_quality 24
滤镜   -vf libplacebo=w=1920:h=1080:downscaler=mitchell:tonemapping=bt.2390:peak_detect=1:gamut_mode=perceptual:apply_dolbyvision=1:colorspace=bt709:color_primaries=bt709:color_trc=bt709:range=tv:format=yuv420p
音频   -c:a:0 copy
封装   -movflags +faststart -f mp4
输出   D:\转码输出\IMG_4521_1080p_h264.mp4
