crates/vidforge-core/tests/snapshots/args_facts__iphone_dv84_streaming_qsv_cfr.snap
---
source: crates/vidforge-core/tests/args_facts.rs
expression: text
---
全局   ffmpeg -hide_banner -nostdin -y -loglevel warning -progress pipe:1 -nostats
输入   -hwaccel auto -i D:\素材\2026-08 京都\IMG_4521.MOV
映射   -map 0:0 -map 0:1 -map_metadata 0
视频   -c:v hevc_qsv -pix_fmt p010le -profile:v main10 -preset medium -global_quality 24
帧率   -fps_mode:v cfr -r 30
音频   -c:a:0 copy
封装   -tag:v hvc1 -movflags +faststart -f mp4
输出   D:\转码输出\IMG_4521_2160p_hevc.mp4
